--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^4.0.2",
+    "react-toastify": "^9.0.8",
     "sass": "^1.54.9",
     "scss": "^0.2.4",
     "simple-typewriter": "0.0.1",
